@@ -1,9 +1,12 @@
 1998-10-14  Yo Ric Dude  <ricdude@ix.netcom.com>
 
-	* esdctl.c: beef up esdctl for industrial grade use.  added an
+	* Makefile.am: esdctl now uses getopt_long, and therefore needs
+	the LIBOBJS in it's LDADD.
+
+	* esdctl.c: beefed up esdctl for industrial grade use.  added an
  	exit_usage function, and getopt style option parsing.  It was
  	destined to become esdsh, but this in combination with a real
-	scripting language should be suffient.
+ 	scripting language should be suffient.
 
 1998-10-13  Yo Ric Dude  <ricdude@ix.netcom.com>
 
